--- a/website/style.css
+++ b/website/style.css
@@ -5,6 +5,9 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
 #links a{ color: black; text-decoration: none; text-transform: uppercase; font-weight: bold;font-family: Arial, sans-serif;}
 
 #links .red a{color: red;}
+
+
+
 #nav ul{
     list-style-type: none;
     margin: 0;
@@ -43,7 +46,7 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
 }
 
 #nav li a:hover:not(.active) {
-    background-color: #111;
+    background-color: #93c1ec66;
 }
 
 #logo {height: 100px; top: 10px; position: relative;z-index: 10000;
@@ -55,21 +58,27 @@ vertical-align: middle; left: 10px;}
 	top: -60px;
 }
 
-#headerImage {
-	width: 100%; 
-	height: 375px; 
-	position: relative; 
-	top: -20px;
+#header{
+	width: 1800px;
+	height: auto;
+	margin-top: -39px;
 }
 
-#headerDiv {
-	
-	width: 300px; 
-	height: 340px; 
-	position: relative; 
-	left: 1000px;
-	top: -380px; 
+.headerImage {
+	height: 80%;
+	width: 65%;
+	position: relative;
+	float: left;
+}
+
+.headerDiv {
+	width: 300px;
+	height: 340px;
+	position: relative;
+	left: 50%;
+	top: -380px;
 	font-family: Arial, sans-serif;
+	float: none;
 }
 
 #phone {
@@ -83,16 +92,16 @@ vertical-align: middle; left: 10px;}
 
 .headerButtons{
 	width: 230px; 
-	height: 60px; 
+	height: 50px;
 	border: none; 
 	font-weight: bold;
 	text-align; center;  
 	font-size: 17px; 
 	display: block; 
 	border-radius: 10px; 
-	color: white; 
-	margin-top: -20px;
-	margin-bottom: 55px; 
+	color: white;
+	margin-top: -30px;
+	margin-bottom: 50px;
 }
 
 #donateButton {
@@ -118,40 +127,36 @@ vertical-align: middle; left: 10px;}
 	border:1px solid green;
 }
 
-#body { 
-	background-image: url("images/body.jpg"); 
-	height:600px ; 
-	position: absolute; 
-	margin: 0; 
-	top:450px; 
-	left:0; 
-	right:0;
+#body {
+	background-image: url("images/body.jpg");
+	height: 600px;
+	margin-top: 80px;
 }
 #TEST{background: linear-gradient(0deg, rgba(29, 111, 187, 0.63) , rgba(255, 255, 255, 0.08) ); width: 100%;height: 900px; z-index: 100; }
 
 #body #bodyHeading {
-	color: #6B6868; 
-	font-size: 55px; 
-	font-family: Arial, sans-serif; 
+	color: #6B6868;
+	font-size: 50px;
+	font-family: Arial, sans-serif;
 	padding-left: 170px;
+	padding-top: 50px;
 }
 
 #body .text{
 	color: #333333; 
-	font-size: 17px; 
+	font-size: 15px;
 	font-family: Arial, sans-serif; 
 	padding-left: 200px; 
 	width: 960px;
+	text-align: justify;
 }
 
 #schedule {
 	background-image: url("images/schedule.v1.png"); 
-	height: 1000px; 
-	position:absolute; 
+	height: 500px;
 	margin: 0; 
 	left: 0; 
-	right: 0; 
-	top:1050px; 
+	right: 0;
 	border-top: 7px solid #054C8D;
 }
 
@@ -172,8 +177,8 @@ vertical-align: middle; left: 10px;}
 }
 
 #schedule #scheduleText{
-	color: white; 
-	font-size: 19px; 
+	color: white;
+	font-size: 17px;
 	width: 725px; 
 	height: 175px; 
 	position: relative; 
@@ -183,20 +188,17 @@ vertical-align: middle; left: 10px;}
 }
 
 #joinus {
-	background-color: white; 
-	height: 500px; 
-	position:absolute; 
-	margin: 0; 
-	left: 0; 
-	right: 0; 
-	top:2050px; 
+	background-color: #fff;
+	/*
+	background-image: url("images/joinUs.png");
+	 */
+	height: 500px;
 	border-top: 7px solid rgba(29, 111, 187, 0.63);
 }
 
 #joinus #joinusHeading{ 
 	color: #4486C3; 
-	font-size: 55px; 
-	 
+	font-size: 55px;
 	position: relative; 
 	text-transform: uppercase; 
 	font-family: Arial, sans-serif; 
@@ -243,8 +245,8 @@ vertical-align: middle; left: 10px;}
 }
 
 #joinusImage {
-	position: absolute; 
-	padding-top: 206px; 
+	position: absolute;
+	padding-top: 110px;
 	width: 100%;
 }
 
