--- a/website/style.css
+++ b/website/style.css
@@ -1,5 +1,4 @@
 
-
 body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
 
 #links ul{list-style-type: none; display: inline; overflow: hidden; position: relative;}
@@ -120,7 +119,10 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         height: 600px;
         margin-top: 80px;
     }
-    #TEST{background: linear-gradient(0deg, rgba(29, 111, 187, 0.63) , rgba(255, 255, 255, 0.08) ); width: 100%;height: 900px; z-index: 100; }
+    #TEST{background: linear-gradient(0deg, rgba(29, 111, 187, 0.63) , rgba(255, 255, 255, 0.08) );
+        width: 100%;
+        height: 900px;
+        z-index: 100; }
 
     #body #bodyHeading {
         color: #6B6868;
@@ -323,7 +325,9 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         font-family: Arial, sans-serif;
         padding-left: 170px;
     }
+
     #contactForm{position: relative; left: 150px; top: -150px;}
+
     textarea {
         width: 1070px;
         height: 168px;
@@ -377,7 +381,7 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     .reserveInput, .volunteerInput, .loginInput {
         width: 100%;
         padding: 12px 20px;
-        margin: 8px 0;
+        margin: 8px 20px;
         display: inline-block;
         border: 1px solid #ccc;
         box-sizing: border-box;
@@ -394,7 +398,8 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     .cancelbtn {
         width: auto;
         padding: 10px 18px;
-        background-color: #f44336;
+        background-color: #4396E3;
+        border-radius: 5px;
     }
 
 
@@ -427,7 +432,7 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         background-color: #fefefe;
         margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
         border: 1px solid #888;
-        width: 20%; /* Could be more or less, depending on screen size */
+        width: 30%; /* Could be more or less, depending on screen size */
     }
 
     /* The Close Button (x) */
@@ -726,6 +731,32 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     .contactSubmitButton {
         position: static;
     }
+
+
+    /* Modal Content/Box */
+    .modal-content {
+        background-color: #fefefe;
+        margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+        border: 1px solid #888;
+        width: 70%; /* Could be more or less, depending on screen size */
+    }
+
+    .reserveInput, .volunteerInput, .loginInput {
+        width: 100%;
+        padding: 10px 15px;
+        margin: 8px 20px;
+        display: inline-block;
+        border: 1px solid #ccc;
+        box-sizing: border-box;
+        border-radius: 5px;
+    }
+
+
+    .container {
+        padding: 16px;
+        margin-right: 40px;
+    }
+
 }
 
 
