--- a/website/style.css
+++ b/website/style.css
@@ -48,24 +48,25 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     #logo {height: 100px; top: 10px; position: relative;z-index: 10000;
         vertical-align: middle; left: 10px;}
 
-
+h2{
+    color:black;
+}
 
 
     .headerImage {
         width: 100%;
         position: relative;
         float: left;
-        margin-top: -2%;
+        z-index: -1;
+
     }
 
     .headerDiv {
-        width: 300px;
-        height: 340px;
-        position: relative;
-        left: 70%;
-        top: -380px;
         font-family: Arial, sans-serif;
-        float: none;
+        float: right;
+        z-index: 2;
+        margin-top: -35%;
+        margin-right: 10%;
     }
 
     #phone {
@@ -78,11 +79,10 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     }
 
     .headerButtons{
-        width: 230px;
-        height: 50px;
+        width: 100%;
+        height: 45px;
         border: none;
         font-weight: bold;
-        text-align; center;
         font-size: 17px;
         display: block;
         border-radius: 10px;
@@ -115,9 +115,10 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     }
 
     #body {
-        background-image: url("images/body.jpg");
-        height: 600px;
-        margin-top: 80px;
+        background: url(images/body.jpg) repeat-x;
+        z-index: -1;
+        clear: both;
+        padding-bottom: 40px;
     }
     #TEST{background: linear-gradient(0deg, rgba(29, 111, 187, 0.63) , rgba(255, 255, 255, 0.08) );
         width: 100%;
@@ -128,16 +129,16 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         color: #6B6868;
         font-size: 50px;
         font-family: Arial, sans-serif;
-        padding-left: 170px;
-        padding-top: 115px;
+        padding-left: 20%;
+        padding-top: 30px;
     }
 
     #body .text{
         color: #333333;
         font-size: 15px;
         font-family: Arial, sans-serif;
-        padding-left: 200px;
-        width: 960px;
+        padding-left: 20%;
+        padding-right: 20%;
         text-align: justify;
     }
 
@@ -152,74 +153,63 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
 
     #schedule #scheduleHeading{
         color: white;
-        font-size: 55px;
-
-        position: relative;
+        font-size: 50px;
         text-transform: uppercase;
         font-family: Arial, sans-serif;
-        padding-left: 170px;
+        padding-left: 20%;
     }
 
     #schedule img{
-        height: 170px;
-        width: 170px;
-        padding-left: 240px;
+        width: 20%;
+        padding-left: 10%;
+        float: left;
     }
 
     #schedule #scheduleText{
         color: white;
         font-size: 17px;
-        width: 725px;
-        height: 175px;
-        position: relative;
-        left: 500px;
-        top: -180px;
+        width: 45%;
         font-family: Arial, sans-serif;
+        padding-right: 15%;
+        float: right;
+        text-align: justify;
     }
 
     #joinus {
         background-color: #fff;
-        /*
-        background-image: url("images/joinUs.png");
-         */
-        height: 809px;
+        height: 95%;
         border-top: 7px solid rgba(29, 111, 187, 0.63);
     }
 
     #joinus #joinusHeading{
         color: #4486C3;
-        font-size: 55px;
-        position: relative;
+        font-size: 50px;
         text-transform: uppercase;
         font-family: Arial, sans-serif;
-        padding-left: 170px;}
+        padding-left: 20%;
+    }
 
     #joinus #joinusText{
         font-weight: bold;
-        font-size: 20px;
-        width: 500px;
-        height: 300px;
+        font-size: 17px;
         font-family: Arial, sans-serif;
-        padding-left: 240px;
+        padding-left: 20%;
+        padding-right: 20%;
+        text-align: justify;
+
     }
 
     #joinus .joinusButtons{
         background-color: #4486C3;
-        text-decoration: none;
         text-transform: uppercase;
-        color: white;
-
-        width: 250px;
-        height: 70px;
+        width: 180px;
+        height: 60px;
         border: none;
         font-weight: bold;
-        text-align; center;
         font-size: 20px;
         display: block;
         border-radius: 10px;
-
-        margin-top: -20px;
-        margin-bottom: 55px;
+        margin-right: 20px;
 
     }
 
@@ -229,25 +219,26 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     }
 
     #joinusDiv{
-        position: relative;
-        left: 900px;
-        top: -360px;
+        border: none;
+        font-weight: bold;
+        font-size: 17px;
+        display: inline-flex;
+        border-radius: 10px;
+        color: white;
+        margin-left: 30%;
     }
 
     #joinusImage {
-        position: absolute;
-        padding-top: 22px;
-        width: 100%;
+        width: 95%;
+        z-index: 3;
     }
 
     #services #servicesHeading{
         color: #4486C3;
-        font-size: 55px;
-        position: relative;
+        font-size: 50px;
         text-transform: uppercase;
         font-family: Arial, sans-serif;
-        padding-left: 170px;
-        padding-top: 50px;
+        padding-left: 20%;
     }
 
     #services {
@@ -263,38 +254,32 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     #services #servicesText{
         font-weight: bold;
         font-size: 20px;
-        width: 750px;
-        height: 300px;
         color: #413F3F;
         font-family: Arial, sans-serif;
-        padding-left: 350px;
+        padding-left: 20%;
         position: absolute;
-        padding-top: -10px;
     }
 
     #events {
         background-color: rgba(71, 152, 225, 0.35);
-        height: 600px;
-        margin: 0;
-        left: 0;
-        right: 0;
+        height: 500px;
         border-top: 7px solid white;
     }
 
     #events #eventsHeading{
         color: black;
-        font-size: 55px;
-        position: relative;
+        font-size: 50px;
         text-transform: uppercase;
         font-family: Arial, sans-serif;
-        padding-left: 170px;
+        padding-left: 20%;
+
     }
 
     div.gallery {
-        margin: 15px;
+        margin: 10px;
         border: 0px solid #ccc;
         float: left;
-        width: 250px;
+        width: 28%;
     }
 
  
@@ -304,11 +289,12 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         height: auto;
     }
 
-    .gal {width: 900px; height: 500px; position: relative; padding-left: 300px; top: -25px;}
+    .gal {    padding-left: 20%;
+        padding-right: 20%;}
 
     #contact {
         background-color: #0A4275;
-        height: 600px;
+        height: 700px;
         margin: 0;
         left: 0;
         right: 0;
@@ -317,19 +303,19 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
 
     #contact #contactHeading{
         color: white;
-        font-size: 55px;
-
-        position: relative;
+        font-size: 50px;
         text-transform: uppercase;
         font-family: Arial, sans-serif;
-        padding-left: 170px;
+        padding-left: 20%;
     }
 
-    #contactForm{position: relative; left: 150px; top: -150px;}
+    #contactForm{
+        margin-left: 20%;
+    }
     
 
     textarea {
-        width: 1070px;
+        width: 70%;
         height: 168px;
         border: 2px solid white;
         background-color: #0A4275;
@@ -338,8 +324,6 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         color: white;
         font-weight: bold;
         font-size: 17px;
-        padding-left: 15px;
-        padding-top: 10px;
     }
     .textInput {
         width: 371px;
@@ -369,13 +353,11 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     }
 
     .contactDiv {
-        font-weight:bold;
+        font-weight: bold;
         color: white;
         font-size: 2em;
         font-family: Arial, sans-serif;
-        position: relative;
-        top: -30px;
-        left: 650px;
+        margin-left: 20%;
     }
 
     .reserveInput, .volunteerInput, .loginInput {
@@ -390,9 +372,10 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     /* Set a style for all buttons */
 
 
-    button:hover {
-        opacity: 0.8;
-    }
+button:hover {
+    opacity: 0.8;
+    background-color: ;
+}
 
     /* Extra styles for the cancel button */
     .cancelbtn {
@@ -458,8 +441,9 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         font-weight: bold;
         height: 50px;
         width: 160px;
-        border-radius:5px;
-        margin: 50px;
+        border-radius: 5px;
+        font-size: 12px;
+        margin: 10px;
 
     }
 
@@ -470,10 +454,8 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
     }
 
     #servicesButtonId {
-        padding-left: 200px;
-        height: auto;
-        position: relative;
-        top: -35px;
+        margin-left: 15%;
+        margin-right: 15%;
         }
 
     .down {
@@ -504,16 +486,21 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         height: auto;
         width: auto;
     }
-	h2{ color: white; }
+	h2{
+        /*color: white;*/
+    }
+
+    #joinusImage {
+        padding-top:137px;
+    }
     .headerDiv {
-        width: 200px;
+        width: 100px;
         height: 200px;
-        position: sticky;
+        position: relative;
         left: 30%;
         font-family: Arial, sans-serif;
         float: none;
-        top: -220px;
-        padding-bottom: 30px;
+        top: -270px;
     }
 
     .headerImage {
@@ -521,8 +508,10 @@ body, html { position: relative;overflow-x: hidden; margin:0; padding:0;}
         height: 330px;
         clear: left;
         margin-top: -7%;
-        top: 15px;
+        top: 4px;
     }
+
+
 
     .headerButtons{
         width: 150px;
