--- a/website/style.css
+++ b/website/style.css
@@ -916,7 +916,7 @@ i {
         background-color: rgba(255, 255, 255, 0.74);
         padding: 25px;
         margin-right: 30%;
-        margin-top: -70%;
+        margin-top: -80%;
         border-radius: 15px;
     }
 
@@ -941,36 +941,15 @@ i {
 
     #joinusDiv {
         display: flex;
+    }
+
+    textarea {
+        width: 70%;
+        height: 140px;
+    }
 }
 
-@media screen and (max-width: 380px) {
-    #joinusImage {
-        padding-top: 137px;
-    }
 
-    .headerDiv {
-        width: 100px;
-        height: 200px;
-        position: relative;
-        left: 30%;
-        font-family: Arial, sans-serif;
-        float: none;
-        top: -270px;
-    }
-
-    #phone {
-        color: white;
-    }
-
-    .headerImage {
-        width: 150%;
-        height: 330px;
-        clear: left;
-        margin-top: -7%;
-        top: 4px;
-    }
-
-}
 
 
 
